<resources>
    <string name="app_name">Recipes</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="recipes_item">Recipes</string>
    <string name="favourites_item">Favourites</string>
    <string name="add_to_favourites_content">Add to favourites</string>
    <string name="recipe_image">Recipe image</string>
    <string name="search_container_hint">Search</string>
    <string name="favourites_title">Favourites</string>
    <string name="error_description">Error</string>
    <string name="error_state_reload">Reload</string>
    <string name="empty_description">Empty</string>
    <string name="share_recipe">Share</string>
    <string name="you_will_need">You wil need</string>
    <string name="cooking_steps">Cooking steps</string>
    <string name="no_recipe_steps">No cooking steps for the recipe</string>
    <string name="look_at_the_source">Look at the source</string>
    <string name="you_may_like">You may like</string>
    <string name="no_recipes_found">No recipes found</string>
</resources>