<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/black"
    tools:context=".screens.RecipeFragment">

    <LinearLayout
        android:id="@+id/title_container"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:orientation="horizontal"
        style="@style/toolbar_container"

        android:paddingStart="@dimen/normal_padding"
        android:paddingEnd="@dimen/normal_padding"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/scroll_recipe"

        >

        <TextView
            android:id="@+id/recipe_title"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            tools:text="Doner with meat"
            android:lines="1"
            android:ellipsize="end"
            android:textSize="@dimen/large_title_text"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <CheckBox
            android:id="@+id/favorites_button"

            android:layout_width="50dp"

            android:layout_height="match_parent"

            android:button="@drawable/add_to_favourites_selector"
            android:buttonTint="@color/white"
            />

        <ImageButton
            android:id="@+id/share_button"
            android:contentDescription="@string/share_recipe"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:background="?android:selectableItemBackground"
            android:src="@drawable/ico_share"
            android:tintMode="screen" />

    </LinearLayout>

    <ScrollView
        android:id="@+id/scroll_recipe"
        android:scrollbars="none"
        android:background="@drawable/fragment_container_shape"
        android:overScrollMode="never"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/title_container"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/recipe_image"
                android:layout_width="match_parent"
                android:layout_height="200dp"

                app:shapeAppearanceOverlay="@style/recipe_item_photo"
                android:src="@drawable/default_recipe"
                android:scaleType="fitCenter"
                android:layout_gravity="center"
                android:adjustViewBounds="true" />

            <androidx.recyclerview.widget.RecyclerView

                android:id="@+id/chip_recycler"
                android:overScrollMode="never"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                android:orientation="horizontal"
                tools:listitem="@layout/chip_item" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/you_will_need"
                android:padding="@dimen/normal_padding"
                android:textSize="@dimen/large_title_text"
                android:textColor="@color/black"
                android:textStyle="bold"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/products_recycler"
                android:overScrollMode="never"
                android:nestedScrollingEnabled="false"
                android:layout_width="match_parent"
                android:layout_marginStart="@dimen/huge_margin"
                android:layout_marginEnd="@dimen/huge_margin"
                android:layout_height="wrap_content"
                tools:listitem="@layout/product_item"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:id="@+id/recipes_steps"

                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/normal_padding"
                        android:textSize="@dimen/large_title_text"
                        android:text="@string/cooking_steps"
                        android:textStyle="bold"
                        android:textColor="@color/black"/>

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/steps_recycler"
                        android:overScrollMode="never"
                        android:nestedScrollingEnabled="false"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        tools:listitem="@layout/cooking_step_item"
                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                        android:layout_marginStart="@dimen/normal_margin"
                        android:layout_marginEnd="@dimen/normal_margin"
                        />

                </LinearLayout>

                <TextView
                    android:id="@+id/empty_state_text"
                    android:text="@string/no_recipe_steps"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textSize="@dimen/large_title_text"
                    android:padding="@dimen/normal_padding"
                    android:textColor="@color/black" />


            </FrameLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/source_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/look_at_the_source"
                style="@style/Widget.MaterialComponents.Button"
                android:paddingBottom="@dimen/normal_margin"
                android:layout_marginStart="@dimen/normal_margin"
                android:layout_marginEnd="@dimen/normal_margin"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/normal_padding"
                android:textSize="@dimen/large_title_text"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:text="@string/you_may_like"
                />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/similar_recycler"
                    android:overScrollMode="never"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:listitem="@layout/similar_item"
                    android:paddingBottom="@dimen/bottom_navigation_space_margin"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    android:orientation="horizontal"
                    />

                <ProgressBar
                    android:id="@+id/similar_progress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    />


            </FrameLayout>


        </LinearLayout>

    </ScrollView>

    <include layout="@layout/current_state" />

</androidx.constraintlayout.widget.ConstraintLayout>